# spack-exercise

./: CMakeLists.txt  change_git_repo.patch  docker-compose.yml  main.cpp  package-pip.py  package.py  package2.py
docker/: Dockerfile  package.py
filesystem/: filesystem.cpp
flatset/: flatset.cpp
spack-exercise-solution/: package.py
yamlParser/: yamlParser.cpp
